updated vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
+  "version": 2,
   "functions": {
-    "api/*.rs": {
-      "runtime": "vercel-rust@1.0.0"
+    "api/**/*.rs": {
+      "runtime": "vercel-rust@0.11.4"
     }
   },
-  "buildCommand": "cd api && cargo build --release --target=x86_64-unknown-linux-musl",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm install && cd api && cargo fetch",
-  "regions": ["iad1"],
-  "env": {
-    "RUST_BACKTRACE": "1"
-  }
+  "routes": [
+    {
+      "src": "/api/test/(.*)",
+      "dest": "/api/test/$1.rs"
+    },
+    {
+      "src": "/api/admin/(.*)",
+      "dest": "/api/admin/$1.rs"
+    }
+  ]
 }
