--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.rs": {
-      "runtime": "rust"
+      "runtime": "vercel-rust@latest"
     }
   },
   "routes": [
