--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 vercel_runtime = "1.1.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
+# Switched to rustls so it's not dependent on the host OS
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
+hex = "0.4"
+sha2 = "0.10"
 
 # Explicitly define each API function as a binary target
 [[bin]]
