--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,20 @@
   "version": 2,
   "functions": {
     "api/**/*.rs": {
-      "runtime": "vercel-rust@4.0.9"
+      "runtime": "vercel-rust@4.0.9",
+      "config": {
+        "buildArgs": ["--release"],
+        "rustFlags": "-C target-feature=+crt-static"
+      }
     }
   },
   "routes": [
-    { "src": "/api/test/create", "dest": "/api/test/create.rs" },
-    { "src": "/api/test/fetch", "dest": "/api/test/fetch.rs" },
-    { "src": "/api/test/submit", "dest": "/api/test/submit.rs" },
-    { "src": "/api/admin/flush", "dest": "/api/admin/flush.rs" }
-  ]
+    { "src": "/api/test/create", "dest": "api/test/create.rs" },
+    { "src": "/api/test/fetch", "dest": "api/test/fetch.rs" },
+    { "src": "/api/test/submit", "dest": "api/test/submit.rs" },
+    { "src": "/api/admin/flush", "dest": "api/admin/flush.rs" }
+  ],
+  "env": {
+    "SQLX_OFFLINE": "true"
+  }
 }
