--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.rs": {
-      "runtime": "vercel-rust@4.0.9",
+  "builds": [
+    {
+      "src": "api/**/*.rs",
+      "use": "vercel-rust@4.0.9",
       "config": {
         "buildArgs": ["--release"],
         "rustFlags": "-C target-feature=+crt-static"
       }
     }
-  },
+  ],
   "routes": [
     { "src": "/api/test/create", "dest": "api/test/create.rs" },
     { "src": "/api/test/fetch", "dest": "api/test/fetch.rs" },
