--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 vercel_runtime = "1.1.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-# Switched to rustls so it's not dependent on the host OS
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
@@ -15,22 +14,22 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 hex = "0.4"
 sha2 = "0.10"
 
-# Explicitly define each API function as a binary target
+# UPDATED PATHS: Added api/ prefix
 [[bin]]
 name = "create"
-path = "test/create.rs"
+path = "api/test/create.rs"
 
 [[bin]]
 name = "fetch"
-path = "test/fetch.rs"
+path = "api/test/fetch.rs"
 
 [[bin]]
 name = "submit"
-path = "test/submit.rs"
+path = "api/test/submit.rs"
 
 [[bin]]
 name = "flush"
-path = "admin/flush.rs"
+path = "api/admin/flush.rs"
 
 [profile.release]
 opt-level = 3
