--- a/vercel.json
+++ b/vercel.json
@@ -9,47 +9,8 @@
       "src": "api/**/*.rs",
       "use": "vercel-rust",
       "config": {
-        "buildArgs": ["--release", "--jobs", "1"]
+        "rustFlags": "-C target-feature=+crt-static"
       }
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/test/create",
-      "dest": "api/test/create.rs"
-    },
-    {
-      "src": "/api/test/fetch",
-      "dest": "api/test/fetch.rs"
-    },
-    {
-      "src": "/api/test/submit",
-      "dest": "api/test/submit.rs"
-    },
-    {
-      "src": "/api/admin/flush",
-      "dest": "api/admin/flush.rs"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ],
-  "functions": {
-    "api/test/create.rs": {
-      "maxDuration": 10
-    },
-    "api/test/fetch.rs": {
-      "maxDuration": 10
-    },
-    "api/test/submit.rs": {
-      "maxDuration": 10
-    },
-    "api/admin/flush.rs": {
-      "maxDuration": 10
-    }
-  }
+  ]
 }
