--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 hex = "0.4"
 sha2 = "0.10"
 
-# UPDATED PATHS: Added api/ prefix
+# --- BINARY PATHS UPDATED FOR ROOT LOCATION ---
+
 [[bin]]
 name = "create"
 path = "api/test/create.rs"
@@ -30,8 +31,3 @@ path = "api/test/submit.rs"
 [[bin]]
 name = "flush"
 path = "api/admin/flush.rs"
-
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
