--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.rs": {
-      "runtime": "vercel-rust"
+      "runtime": "vercel-rust@4.0.9"
     }
   },
   "rewrites": [
